update omicron for ApiIdSortMode -> IdSortMode
