# libs/api/__generated__/models/index.ts
@@ -6,7 +6,6 @@ export * from './ActionErrorAnyOf2'
 export * from './ActionErrorAnyOf2DeserializeFailed'
 export * from './ActionErrorAnyOf3'
 export * from './ActionErrorAnyOf4'
-export * from './ApiIdSortMode'
 export * from './DiskAttachment'
 export * from './DiskCreateParams'
 export * from './DiskState'
@@ -16,6 +15,7 @@ export * from './DiskStateAnyOf2'
 export * from './DiskStateAnyOf3'
 export * from './DiskView'
 export * from './DiskViewResultsPage'
+export * from './IdSortMode'
 export * from './IdentityMetadata'
 export * from './InstanceCreateParams'
 export * from './InstanceState'
